themes/dot/assets/css/style.css
/* ... */
.sec-membros .member-card:hover .hoverAppear{
  display: none;
}

.dynamicThingy
{    
    box-shadow: 3px 3px 3px black;
    transition: .3s ease;
    
    background-color:#2b2b2b;
    margin:30px; 
    margin-left: 10px;
    margin-right: 10px;

    padding: 20px;
}

.dynamicThingy:hover
{
    box-shadow: 10px 10px 10px black;
}

.dynamicThingy.helperCard {
  margin-left :0px;
  margin-right :0px;
}

@media (min-width: 768px) {
  .dynamicThingy.helperCard {
    margin-left: 30px;
    margin-right: 30px;
  }
  
  .dynamicThingy {
    margin-left :30px;
    margin-right :30px;
  }
}
@media (min-width: 992px) {
  .sec-membros .member-card {
    height: 290px;
  }
  .sec-membros .member-card:hover {
    height: 300px;
  }
}

@media (min-width: 450px) {
  .sec-membros .member-card:hover .hoverAppear{
    display: block;
  }
}



@keyframes fadeInVisibility {
  from {
      visibility: hidden;
  }

  to {
      visibility: visible;
  }
}

  @keyframes fadeInUp {
      from {
          /*transform: translateY(40px);/*translate3d(0,40px,0);*/
          bottom: -100px;
          opacity: 0;
      }

      to {
          bottom: 0px;
          opacity: 1;
      }
  }

@keyframes fadeInDown {
  from {
      transform: translate3d(0,-80px,0);
      opacity: 0;
  }

  to {
      transform: translate3d(0,0,0);
      opacity: 1;
  }
}

@keyframes fadeInRight {
  from {
      transform: translate3d(140px,0px,0);
      opacity: 0;
  }

  to {
      transform: translate3d(0,0,0);
      opacity: 1;
  }
}

@keyframes fadeInLeft {
  from {
      transform: translate3d(-140px,0px,0);
      opacity: 0;
  }

  to {
      transform: translate3d(0px,0,0);
      opacity: 1;
  }
}

@keyframes fadeIn {
  from {
      opacity: 0;
  }

      to {
          opacity: 1;
      }
  }

@keyframes fadeOut {
  from {
      opacity: 1;
  }

  to {
      opacity: 0;
  }
}

@keyframes fadeOut {
  from {
      opacity: 1;
  }

  to {
      opacity: 0;
  }
}

@keyframes fadeOutTransform {
  from {
      opacity: 1;
      transform: translate3d(0,0,0);
  }

  to {
      opacity: 0;
      transform: translate3d(0,0px,0);
  }
}

.navbar .nav-item .nav-link:hover { 
  color: white !important;
}

.btn-primary.disabled {
  color: #fff;
  background-color: rgb(99, 99, 99);
  border-color: rgb(99, 99, 99);
}

.btn-primary:hover {
  background: #307742;
}

.fader {
  opacity: 0;
}

.fader-fadeInUp.fader-animated {
  animation-name: fadeInUp;
  animation-duration: 0.8s;
}

.fader-fadeInDown.fader-animated {
  animation-name: fadeInDown;
  animation-duration: 0.6s;
}

.fader-fadeIn.fader-animated {
  animation-name: fadeIn;
  animation-duration: 1s;
}

.fader-fadeInVisibility.fader-animated {
  animation-name: fadeInVisibility;
  animation-duration: 1s;
}

.fader-fadeInRight.fader-animated {
  animation-name: fadeInRight;
  animation-duration: 0.8s;
}

.fader-fadeInLeft.fader-animated {
  animation-name: fadeInLeft;
  animation-duration: 0.8s;
}

.fader-animated {
  animation-timing-function: ease;
  animation-fill-mode: forwards;
}

.fader-fadeOut.fader-animated {
  animation-name: fadeOut;
  animation-duration: 0.5s;
  animation-delay: 0s !important;
  animation-fill-mode: backwards;
}
.fader-fadeInDown.fader-fadeOut.fader-animated {
  animation-name: fadeOutTransform;
}

.helperCard {
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
}

.helperCard div {
  margin-top: 10px;
}

img.projectMembersPhoto {    
  width: 100px;
  height: 100px;
  /*  margin-right: 10px; */
  padding: 10px;
  transition: all 0.2s; 
}

img.projectMembersPhoto:hover {
  padding: 0px;
}

.projectMembersContainer {
  margin-top: 20px;
  margin-bottom: 10px;
}

.carouselContainer {
  padding: 0px;
  height: 700px;
  max-width: auto;
  position: relative;
}

.carouselContainer div {
  height: 100%;
}

.carouselContainer img {
  height: 100%;
  object-fit: cover;
}

.carousel-inner-home {
  filter: brightness(100%);
}

.carousel-control-next {
  z-index: 999;
  opacity: 1;
  width: 10%;
}

.carousel-control-prev {
  z-index: 999;
  opacity: 1;
  width: 10%;
}

.carousel-control-next:hover {
  background-color: #2f2f2f8c;
}

.carousel-control-prev:hover {
  background-color: #2f2f2f8c;
}

html {
  height: 100% !important;
  min-height: 100% !important;
  overflow: hidden;
  overflow-x:hidden;
}

body {
  overflow-y: auto;
}

header {
  
  z-index: 1000000;
}


#overlay {
  position: absolute;
  top: 0;
  left: 0;
  top:50px;
  width: 100vw;
  height: 100vh;
  background: radial-gradient(ellipse, rgba(77, 77, 77, 1) 0%, rgba(27, 27, 27, 0.5) 70%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  z-index: -1;

}

#matrixCanvas {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -2;
}

